5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1662_1391.log
== TEST (2019-04-15 15:30:30) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150 kWh):
 x = (5,60)
else :
	x
-- ERROR:
File "XXXX", line 3
    if (energia < 150 kWh):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:30:49) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x
-- ERROR:
File "XXXX", line 3
    if (energia < 150 kWh):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:31:28) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:31:36) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:31:44) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- EXECUTION TIME:
0.173258
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
(5, 60)
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
(16, 75)
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
(16, 75)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:31:51) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:33:44) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(round 2, 2(x))
-- EXECUTION TIME:
0.149432
-- ERROR:
  File "/home/codebench/codes/1662/1391/main.py", line 7
    print(round 2, 2(x))
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:33:48) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(round 2, 2(x))
-- ERROR:
File "XXXX", line 7
    print(round 2, 2(x))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:34:33) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(round 2,x)
-- ERROR:
File "XXXX", line 7
    print(round 2,x)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:34:58) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:35:40) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- EXECUTION TIME:
0.143815
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
(5, 60)
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
(16, 75)
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
(16, 75)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:35:44) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:35:52) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:36:05) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- EXECUTION TIME:
0.168821
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
(5, 60)
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
(16, 75)
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
(16, 75)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:17) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:36:30) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)160 kwh
-- EXECUTION TIME:
0.190935
-- ERROR:
  File "/home/codebench/codes/1662/1391/main.py", line 7
    print(x)160 kwh
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:43) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:46) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:46) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:46) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:46) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:46) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:46) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:47) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:49) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:50) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:50) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:50) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:50) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:50) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:50) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:50) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:50) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:50) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:50) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:50) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:50) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:50) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:51) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:37:00) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:37:06) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   x = (5,60)
else :
	x = (16,75)
print(x)
-- EXECUTION TIME:
0.115532
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
(5, 60)
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
(16, 75)
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
(16, 75)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:37:44) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   valor = (5,60)
else :
	valor = (16,75)
print(valor)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:37:57) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   valor = (5,60)
else :
	valor = (16,75)
print(valor)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:38:02) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   valor = (5,60)
else :
	valor = (16,75)
print(valor)
-- EXECUTION TIME:
0.120897
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
(5, 60)
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
(16, 75)
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
(16, 75)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:38:29) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   valor = (5,60)
else :
	valor = (16,75)
print(valor)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:38:34) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   valor = (5,60)
else :
	valor = (16,75)
print(valor)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:38:38) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   valor = (5,60)
else :
	valor = (16,75)
print(valor)
-- EXECUTION TIME:
0.19258
-- TEST CASE 1:
---- input:
142
---- correct output:
90.2
---- user output:
(5, 60)
-- TEST CASE 2:
---- input:
250
---- correct output:
203.5
---- user output:
(16, 75)
-- TEST CASE 3:
---- input:
501

---- correct output:
391.75
---- user output:
(16, 75)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:38:47) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   valor = (5,60)
else :
	valor = (16,75)
print(valor)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:38:58) 
-- CODE:
energia = int(input("consumo de energia: "))

if (energia < 150):
   valor = (5,60)
else :
	valor = (16,75)
print(valor)
-- OUTPUT:
(5, 60)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
